force-app/main/default/objects/Repository__c/fields/Repo_Name__c.field-meta.xml
<CustomField>
    <fullName>Repo_Name__c</fullName>
    <label>Repository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>