force-app/main/default/objects/Repository__c/fields/Repo_URL__c.field-meta.xml
<CustomField>
    <fullName>Repo_URL__c</fullName>
    <formula>&quot;https://github.com/&quot; &amp; Repo_User__c &amp; &quot;/&quot; &amp;  Repo_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repository URL</label>
    <type>Text</type>
</CustomField>