force-app/main/default/objects/Repository__c/fields/Repo_User__c.field-meta.xml
<CustomField>
    <fullName>Repo_User__c</fullName>
    <label>Repository User</label>
    <length>38</length>
    <required>true</required>
    <type>Text</type>
</CustomField>